新增提醒畫面

--- a/iiot/wifi-ad-carousel/index.html
+++ b/iiot/wifi-ad-carousel/index.html
@@ -59,7 +59,7 @@
         <div class="">
           <div class="owl-carousel owl-theme">
             <div class="item">
-              <img src="images/U_81PxKEY33.jpg" alt="">
+              <img src="images/remind.jpg" alt="">
             </div>
             <div class="item">
               <img src="images/U_ZYqxzrNxJ.jpg" alt="">
@@ -102,7 +102,7 @@
           <script>
             $(document).ready(function() {
               $('.owl-carousel').owlCarousel({
-                loop: true,
+                // loop: true,
                 margin: 10,
                 autoplay: true,
                 autoplayTimeout:3000,
