--- a/marryMe/result.html
+++ b/marryMe/result.html
@@ -66,14 +66,17 @@
                 <figure class="teacher">
                     <img src="images/index/img_teacher.png" alt="星座塔羅專家小孟老師" class="object_fit_contain">
                 </figure>
-                <figure class="subtitle">
-                    <img class="pc" src="images/index/subtitle_text_info.png" alt="我們的命定戀愛指數介紹" class="object_fit_contain">
-                    <img class="mob" src="images/index/subtitle_text_info_s.png" alt="我們的命定戀愛指數介紹" class="object_fit_contain">
-                </figure>
+                <div class="subtitle">
+                    <div class="the_result">
+                        <p class="ss">試算結果...</p>
+                        <p><span>劉曉語</span> 恭喜您拿出勇氣，跨出幸福的第一步，想知道你和 <span>張小山</span> 的命定戀愛指數？立即看下去吧…</p>
+                    </div>
+                </div>
 
                 <div class="subtitle_box clearfix">
-                    <figure class="subtitle_info">
-                        <img src="images/index/subtitle_01.png" alt="先深呼吸，平穩心情後並告訴我，你們的姓名及國曆生日">
+                    <figure class="subtitle_info the_date">
+                        <p class="day">2020/11/12</p>
+                        <img src="images/index/subtitle_02.png" alt="鑑定日">
                     </figure>
                     <figure class="ill_01">
                         <img src="images/index/illustration_01.png" alt="我們的命定戀愛指數插畫">
@@ -81,79 +84,69 @@
                 </div>
             </section>
             <section class="contents-box">
-                <div class="form_box">
+                <div class="form_box">      
                     <form class="clearfix">
                         <div class="w50">
                             <figure class="form_title">
                                 <img src="images/index/form_top_title_01.png" alt="你的資料">
                             </figure>
                             <fieldset>
-                                <input type="text" name="" placeholder="請輸入您的姓氏" required="" class="LastName">
-                            </fieldset>
-                            <fieldset>
-                                <input type="text" name="" placeholder="請輸入您的名字" required="" class="FirstName">
-                            </fieldset>
-                            <fieldset>
-                                <div class="styled-select">
-                                    <select name="" required="">
-                                        <option value="">請選擇您的性別</option>
-                                        <option value="男生">男生</option>
-                                        <option value="女生">女生</option>
-                                    </select>
+                                <div class="user_avatar">
+                                    <img src="images/index/avatar_female_01.png">
+                                </div>
+                                <div class="result_name">
+                                    <p>劉曉語</p>
                                 </div>
                             </fieldset>
                             <fieldset>
-                                <div class="styled-select">
-                                    <select name="" required="">
-                                        <option value="">請選擇您的生日(西元年／月／日)</option>
-                                        <option value="" selected="">1980</option>
-                                        <option value="">1979</option>
-                                    </select>
+                                <div class="result_bday">
+                                    <p>1990-12-8 （射手座）</p>
                                 </div>
                             </fieldset>
                         </div>
-                        <div class="w50">
+                        <div class="w50 result_ill">
                             <figure class="form_title">
                                 <img src="images/index/form_top_title_02.png" alt="對方的資料">
                             </figure>
                             <fieldset>
-                                <input type="text" name="" placeholder="請輸入您的姓氏" required="" class="LastName">
-                            </fieldset>
-                            <fieldset>
-                                <input type="text" name="" placeholder="請輸入您的名字" required="" class="FirstName">
-                            </fieldset>
-                            <fieldset>
-                                <div class="styled-select">
-                                    <select name="" required="">
-                                        <option value="">請選擇您的性別</option>
-                                        <option value="男生">男生</option>
-                                        <option value="女生">女生</option>
-                                    </select>
+                                <div class="user_avatar">
+                                    <img src="images/index/avatar_male_01.png">
+                                </div>
+                                <div class="result_name">
+                                    <p>張小山</p>
                                 </div>
                             </fieldset>
                             <fieldset>
-                                <div class="styled-select">
-                                    <select name="" required="">
-                                        <option value="">請選擇您的生日(西元年／月／日)</option>
-                                        <option value="" selected="">1980</option>
-                                        <option value="">1979</option>
-                                    </select>
+                                <div class="result_bday">
+                                    <p>1989-06-28 （巨蟹座）</p>
                                 </div>
                             </fieldset>
                         </div>
-                        <button class="btn_goDivination btn_next">下一步，免費分析</button>
                     </form>
                 </div>
             </section>
             <section class="contents-box">
-                <figure class="features">
-                    <img class="pc" src="images/index/features.png" alt="有些話小孟老師一定要告訴你" class="object_fit_contain">
-                    <img class="mob" src="images/index/features_s.png" alt="有些話小孟老師一定要告訴你" class="object_fit_contain">
-                </figure>
-                <figure class="user_feedback">
-                    <img class="pc" src="images/index/user_feedback.png" alt="客戶回饋" class="object_fit_contain">
-                    <img class="mob" src="images/index/user_feedback_s.png" alt="客戶回饋" class="object_fit_contain">
-                </figure>
+                <div class="result_contents">
+                    <div class="result_top_title1">
+                        <figure>
+                            <img class="pc" src="images/index/subtitle_03.png" alt="你們是否為命定的戀人呢…" class="object_fit_contain">
+                            <img class="mob" src="images/index/subtitle_03_s.png" alt="你們是否為命定的戀人呢…" class="object_fit_contain">
+                        </figure>
+                    </div>
+                    <p class="congratulations">在此先恭喜您，感情的世界中，你屬於「主動求愛型」，在愛情的路上男生會…</p>
+                    <div class="result_infobox">
+                        <img src="images/index/img_lock.png" alt="請解鎖" class="object_fit_contain">
+                    </div>
+                    <div class="result_fee">
+                        <figure>
+                            <img class="pc" src="images/index/subtitle_04.png" alt="命定戀人價" class="object_fit_contain">
+                            <img class="mob" src="images/index/subtitle_04_s.png" alt="命定戀人價" class="object_fit_contain">
+                        </figure>
+                    </div>
+                </div>
+                <div class="go_pay">
+                    <button class="btn_pay">下一步，免費分析</button>
+                </div>
             </section>
         </main>
         <!-- ================= Footer ================ -->
