--- a/marryMe/index.html
+++ b/marryMe/index.html
@@ -64,7 +64,8 @@
                     <img class="" src="images/index/main_title.png" alt="我們的命定戀愛指數" class="object_fit_contain">
                 </figure>
                 <figure class="teacher">
-                    <img src="images/index/img_teacher.png" alt="星座塔羅專家小孟老師" class="object_fit_contain">
+                    <img class="pc" src="images/index/img_teacher.png" alt="星座塔羅專家小孟老師" class="object_fit_contain">
+                    <img class="mob" src="images/index/img_teacher_s.png" alt="星座塔羅專家小孟老師" class="object_fit_contain">
                 </figure>
                 <figure class="subtitle">
                     <img class="pc" src="images/index/subtitle_text_info.png" alt="我們的命定戀愛指數介紹" class="object_fit_contain">
@@ -80,7 +81,7 @@
                     </figure>
                 </div>
             </section>
-            <section class="contents-box">
+            <section class="contents_box">
                 <div class="form_box">
                     <form class="clearfix">
                         <div class="w50">
@@ -145,7 +146,7 @@
                     </form>
                 </div>
             </section>
-            <section class="contents-box">
+            <section class="contents_box">
                 <figure class="features">
                     <img class="pc" src="images/index/features.png" alt="有些話小孟老師一定要告訴你" class="object_fit_contain">
                     <img class="mob" src="images/index/features_s.png" alt="有些話小孟老師一定要告訴你" class="object_fit_contain">
