--- a/marryMe/result_pay.html
+++ b/marryMe/result_pay.html
@@ -135,21 +135,16 @@
                         </figure>
                     </div>
                     <div class="fraction_box">
-                        <img src="images/index/img_fraction.png" alt="分數" class="object_fit_contain">
+                        <p>88</p>
                     </div>
                     <p class="congratulations">在此先恭喜您，感情的世界中，你屬於「主動求愛型」，在愛情的路上男生會…</p>
                     <div class="result_infobox">
-                        <img src="images/index/img_lock.png" alt="請解鎖" class="object_fit_contain">
+                        <p>
+                            【庚申日】庚申日出生的命主，固執武斷，恃強獨立。庚申日屬於坐下比劫旺地，通常比劫通根的，都帶著固執和武斷的思維認識。由於專氣，氣場都不小，給人感覺能承擔，做事情具備決斷力的感覺。但是這種日子年輕時候魯莽的多。尤其是命主的元氣旺的，更是不善於考慮後果，欠缺長久的計劃和縝密的思考。庚申日的義氣為先，腦袋破了拿扇子扇，不認慫的個性。這種個性在社會行為當中給人感覺比較大氣，做事情痛快，說話敞亮。可是卻不知道這種日子出生的人，多愛面子，屬於死要面子類型。處理問題有不定性，容易反覆，所以跟庚申日的打交道，需要白紙黑字，鐵板釘釘。<br>
+                            <br>
+婚配適合日柱是：甲子日、甲辰日、甲申日、甲戌日（參半）、乙亥日、乙丑日、乙未日、乙酉日、丙寅日、丙辰日、丙子日、丁卯日、丁丑日、丁亥日、戊午日、戊子日、戊寅日、戊辰日、己酉日、己卯日、己巳日、己亥日、庚辰日、庚午日、庚戌日、辛亥日、辛丑日、辛未日、辛巳日、壬午日、壬戌日、壬申日、癸酉日、癸卯日、癸巳日、癸未日。
+                        </p>
                     </div>
-                    <div class="result_fee">
-                        <figure>
-                            <img class="pc" src="images/index/subtitle_04.png" alt="命定戀人價" class="object_fit_contain">
-                            <img class="mob" src="images/index/subtitle_04_s.png" alt="命定戀人價" class="object_fit_contain">
-                        </figure>
-                    </div>
-                </div>
-                <div class="go_pay">
-                    <button class="btn_pay">付費分析</button>
                 </div>
             </section>
         </main>
