新增 其他app連結

--- a/marryMe/result_pay.html
+++ b/marryMe/result_pay.html
@@ -146,6 +146,36 @@
                         </p>
                     </div>
                 </div>
+                <div class="other_app">
+                    <div class="">
+                        <figure>
+                            <img class="pc" src="images/index/subtitle_05.png" alt="瞧瞧其他線上命理服務" class="object_fit_contain">
+                            <img class="mob" src="images/index/subtitle_05_s.png" alt="瞧瞧其他線上命理服務" class="object_fit_contain">
+                        </figure>
+                    </div>
+                    <ul class="clearfix">
+                        <li>
+                            <a href="https://fate.opoint.com.tw/lover/index.html" target="_blank">
+                                <img src="images/index/icon_512x512_01.png" alt="理想情人"  class="object_fit_contain">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://fate.opoint.com.tw/rice/index.html" target="_blank">
+                                <img src="images/index/icon_512x512_02.png" alt="米卦占卜"  class="object_fit_contain">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://fate.opoint.com.tw/rainbow/index.html" target="_blank">
+                                <img src="images/index/icon_512x512_03.png" alt="彩虹占卜"  class="object_fit_contain">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://fate.opoint.com.tw/soul/index.html" target="_blank">
+                                <img src="images/index/icon_512x512_04.png" alt="前世今生"  class="object_fit_contain">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
         <!-- ================= Footer ================ -->
@@ -186,41 +216,8 @@
             </div>
             <div class="goCoyright copyright"><a href="https://fate.opoint.com.tw/home/" target="_blank">Copyright©2020 開運算算版權所有</a></div>
         </footer>
-        <!-- ================= popup ================= -->
-        <div class="wrap_popup">
-            <div class="popup_box">
-                <div class="popup_cancel"><span>Ｘ</span></div>
-                <!--    姓名不符    -->
-                <p class="popup_title noChinese hidden" style="display: none;">
-                    姓名僅能輸入中文字，<br>
-                    請輸入您的中文姓名，<br>
-                    詳細了解你們的命定戀愛指數！
-                </p>
-                <!--    輸入姓名    -->
-                <p class="popup_title noName hidden" style="display: block;">
-                    您並未輸入完整資料，<br>
-                    請輸入您的完整姓名，<br>
-                    即可免費分析您的結果！
-                </p>
-                <div class="btn_submit"><span>確認</span></div>
-            </div>
-        </div>
         <!-- script -->
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/Common/header.js"></script>
-
-        <script type="text/javascript">
-             //點右邊top
-             $(function(){
-              $(window).scroll(function(){
-                if( $(window).scrollTop() > 1600 ){
-                  $('.btn_goDivination').stop(true,false).addClass('btnFixed')
-                }else{
-                  $('.btn_goDivination').stop(true,false).removeClass('btnFixed')
-                }
-              });
-              return false;
-             });
-        </script>
     </body>
 </html>
