微調與新增表情狀態

--- a/marryMe/result.html
+++ b/marryMe/result.html
@@ -57,6 +57,15 @@
                 <li class="transition4s"><a href="https://fate.opoint.com.tw/home/">開運算算首頁</a></li>
             </ul>
         </header>
+        <!-- 動畫 -->
+        <section class="bg_mask">
+            <div class="chest">
+                <div class="heart left side top"></div>
+                <div class="heart center"></div>
+                <div class="heart right side"></div>
+                <p>指數計算中...</p>
+            </div>  
+        </section>
         <!-- ================== Main ================= -->
         <main class="wrap-content">
             <section class="main_KV">
@@ -139,7 +148,8 @@
                     </div>
                     <p class="congratulations">在此先恭喜您，感情的世界中，你屬於「主動求愛型」，在愛情的路上男生會…</p>
                     <div class="result_infobox">
-                        <img src="images/index/img_lock.png" alt="請解鎖" class="object_fit_contain">
+                        <img class="pc" src="images/index/img_lock.png" alt="請解鎖" class="object_fit_contain">
+                        <img class="mob" src="images/index/img_lock_s.png" alt="請解鎖" class="object_fit_contain">
                     </div>
                     <div class="result_fee">
                         <figure>
