--- a/marryMe/result_pay.html
+++ b/marryMe/result_pay.html
@@ -69,7 +69,7 @@
                 </figure>
                 <div class="subtitle">
                     <div class="the_result">
-                        <p class="ss">試算結果...</p>
+                        <!-- <p class="ss">試算結果...</p> -->
                         <p><span>劉曉語</span> 恭喜您拿出勇氣，跨出幸福的第一步，想知道你和 <span>張小山</span> 的命定戀愛指數？立即看下去吧…</p>
                     </div>
                 </div>
@@ -134,10 +134,17 @@
                             <img class="mob" src="images/index/subtitle_03_s.png" alt="你們是否為命定的戀人呢…" class="object_fit_contain">
                         </figure>
                     </div>
-                    <div class="fraction_box">
+                    <!--  依照各分數區間，出現不同表情的人物道賀。
+                    60-70 理性組合   ----- + class expression_01
+                    71-78 觀察對象   ----- + class expression_02  
+                    79-85 恰如其分   ----- + class expression_03
+                    86-90 無可取代   ----- + class expression_04
+                    91-94 天生絕配   ----- + class expression_05
+                    95以上 天作之合   ----- + class expression_06 
+                    -->
+                    <div class="fraction_box expression_06">
                         <p>88</p>
                     </div>
-                    <p class="congratulations">在此先恭喜您，感情的世界中，你屬於「主動求愛型」，在愛情的路上男生會…</p>
                     <div class="result_infobox">
                         <p>
                             【庚申日】庚申日出生的命主，固執武斷，恃強獨立。庚申日屬於坐下比劫旺地，通常比劫通根的，都帶著固執和武斷的思維認識。由於專氣，氣場都不小，給人感覺能承擔，做事情具備決斷力的感覺。但是這種日子年輕時候魯莽的多。尤其是命主的元氣旺的，更是不善於考慮後果，欠缺長久的計劃和縝密的思考。庚申日的義氣為先，腦袋破了拿扇子扇，不認慫的個性。這種個性在社會行為當中給人感覺比較大氣，做事情痛快，說話敞亮。可是卻不知道這種日子出生的人，多愛面子，屬於死要面子類型。處理問題有不定性，容易反覆，所以跟庚申日的打交道，需要白紙黑字，鐵板釘釘。<br>
@@ -147,13 +154,18 @@
                     </div>
                 </div>
                 <div class="other_app">
-                    <div class="">
+                    <div>
                         <figure>
                             <img class="pc" src="images/index/subtitle_05.png" alt="瞧瞧其他線上命理服務" class="object_fit_contain">
                             <img class="mob" src="images/index/subtitle_05_s.png" alt="瞧瞧其他線上命理服務" class="object_fit_contain">
                         </figure>
                     </div>
                     <ul class="clearfix">
+                        <li>
+                            <a href="https://truly.page.link/luckyccCS" target="_blank">
+                                <img src="images/index/icon_512x512_00.png" alt="線上塔羅"  class="object_fit_contain">
+                            </a>
+                        </li>
                         <li>
                             <a href="https://fate.opoint.com.tw/lover/index.html" target="_blank">
                                 <img src="images/index/icon_512x512_01.png" alt="理想情人"  class="object_fit_contain">
