調整螢幕顯示的 RWD CSS

--- a/marryMe/result.html
+++ b/marryMe/result.html
@@ -16,6 +16,14 @@
         <meta property="og:image" content="images/share_pic.png">
         <meta property="og:description" content="不論戀愛經驗多寡，你還是會渴望遇到命定的人，他…是否為你命定的另一伴? 你們該如何相處才能獲得幸福？讓小孟老師為您分析你們之間的命定戀愛指數，想知道小孟老師為你們分析的結果嗎…？">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="js/wow.js"></script>
+        <script>
+            // animate
+            $(function(){
+                new WOW().init();
+            });
+        </script>
         <!-- CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/common.css">
@@ -94,7 +102,7 @@
                 </div>
             </section>
             <section class="contents_box">
-                <div class="form_box">      
+                <div class="form_box wow fadeIn" data-wow-duration="2.5s">      
                     <form class="clearfix">
                         <div class="w50">
                             <figure class="form_title">
