--- a/marryMe/result_pay.html
+++ b/marryMe/result_pay.html
@@ -16,6 +16,14 @@
         <meta property="og:image" content="images/share_pic.png">
         <meta property="og:description" content="不論戀愛經驗多寡，你還是會渴望遇到命定的人，他…是否為你命定的另一伴? 你們該如何相處才能獲得幸福？讓小孟老師為您分析你們之間的命定戀愛指數，想知道小孟老師為你們分析的結果嗎…？">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="js/wow.js"></script>
+        <script>
+            // animate
+            $(function(){
+                new WOW().init();
+            });
+        </script>
         <!-- CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/common.css">
@@ -85,7 +93,7 @@
                 </div>
             </section>
             <section class="contents_box">
-                <div class="form_box">      
+                <div class="form_box wow fadeIn" data-wow-duration="2.5s">      
                     <form class="clearfix">
                         <div class="w50">
                             <figure class="form_title">
@@ -142,10 +150,10 @@
                     91-94 天生絕配   ----- + class expression_05
                     95以上 天作之合   ----- + class expression_06 
                     -->
-                    <div class="fraction_box expression_06">
+                    <div class="fraction_box expression_06 wow fadeInLeft" data-wow-duration="2.5s">
                         <p>88</p>
                     </div>
-                    <div class="result_infobox">
+                    <div class="result_infobox wow fadeIn" data-wow-duration="2.5s">
                         <p>
                             【庚申日】庚申日出生的命主，固執武斷，恃強獨立。庚申日屬於坐下比劫旺地，通常比劫通根的，都帶著固執和武斷的思維認識。由於專氣，氣場都不小，給人感覺能承擔，做事情具備決斷力的感覺。但是這種日子年輕時候魯莽的多。尤其是命主的元氣旺的，更是不善於考慮後果，欠缺長久的計劃和縝密的思考。庚申日的義氣為先，腦袋破了拿扇子扇，不認慫的個性。這種個性在社會行為當中給人感覺比較大氣，做事情痛快，說話敞亮。可是卻不知道這種日子出生的人，多愛面子，屬於死要面子類型。處理問題有不定性，容易反覆，所以跟庚申日的打交道，需要白紙黑字，鐵板釘釘。<br>
                             <br>
@@ -153,7 +161,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="other_app">
+                <div class="other_app wow fadeInRight" data-wow-duration="2.5s">
                     <div>
                         <figure>
                             <img class="pc" src="images/index/subtitle_05.png" alt="瞧瞧其他線上命理服務" class="object_fit_contain">
