--- a/marryMe/index.html
+++ b/marryMe/index.html
@@ -96,10 +96,16 @@
                                 <img src="images/index/form_top_title_01.png" alt="你的資料">
                             </figure>
                             <fieldset>
-                                <input type="text" name="" placeholder="請輸入您的姓氏" required="" class="LastName">
+                                <input type="text" name="" placeholder="請輸入您的姓氏" required="" class="LastName" minlength="1" maxlength="3">
+                                <p class="error">
+                                    <span>格式錯誤，請輸入中文字！</span>
+                                </p>
                             </fieldset>
                             <fieldset>
-                                <input type="text" name="" placeholder="請輸入您的名字" required="" class="FirstName">
+                                <input type="text" name="" placeholder="請輸入您的名字" required="" class="FirstName" minlength="1" maxlength="3">
+                                <p class="error">
+                                    <span>格式錯誤，請輸入中文字！</span>
+                                </p>
                             </fieldset>
                             <fieldset>
                                 <div class="styled-select">
@@ -111,12 +117,13 @@
                                 </div>
                             </fieldset>
                             <fieldset>
-                                <div class="styled-select">
-                                    <select name="" required="">
+                                <div class="styled-select UserBD">
+                                    <input type="date" value="1985-06-15">
+                                    <!-- <select name="" required="">
                                         <option value="">請選擇您的生日(西元年／月／日)</option>
                                         <option value="" selected="">1980</option>
                                         <option value="">1979</option>
-                                    </select>
+                                    </select> -->
                                 </div>
                             </fieldset>
                         </div>
@@ -125,10 +132,16 @@
                                 <img src="images/index/form_top_title_02.png" alt="對方的資料">
                             </figure>
                             <fieldset>
-                                <input type="text" name="" placeholder="請輸入您的姓氏" required="" class="LastName">
+                                <input type="text" name="" placeholder="請輸入您的姓氏" required="" class="LastName" minlength="1" maxlength="3">
+                                <p class="error">
+                                    <span>格式錯誤，請輸入中文字！</span>
+                                </p>
                             </fieldset>
                             <fieldset>
-                                <input type="text" name="" placeholder="請輸入您的名字" required="" class="FirstName">
+                                <input type="text" name="" placeholder="請輸入您的名字" required="" class="FirstName" minlength="1" maxlength="3">
+                                <p class="error">
+                                    <span>格式錯誤，請輸入中文字！</span>
+                                </p>
                             </fieldset>
                             <fieldset>
                                 <div class="styled-select">
@@ -140,12 +153,13 @@
                                 </div>
                             </fieldset>
                             <fieldset>
-                                <div class="styled-select">
-                                    <select name="" required="">
+                                <div class="styled-select UserBD">
+                                    <input type="date" value="1985-06-15">
+                                    <!-- <select name="" required="">
                                         <option value="">請選擇您的生日(西元年／月／日)</option>
                                         <option value="" selected="">1980</option>
                                         <option value="">1979</option>
-                                    </select>
+                                    </select> -->
                                 </div>
                             </fieldset>
                         </div>
