--- a/2021cwlf/index.html
+++ b/2021cwlf/index.html
@@ -133,7 +133,7 @@
     </section>
 
     <!-- BUY -->
-    <section class="buy">
+    <section class="buy" id="buy">
         <div class="contents-box">
             <div class="row">
                 <div class="col-12 page-header">
