--- a/2021cwlf-2/index.html
+++ b/2021cwlf-2/index.html
@@ -110,13 +110,18 @@
                     <img src="images/about.png" alt="陳昊森 與兒童合照">
                 </div>
             </div>
+            <div class="row mob">
+                <div class="top-title">
+                    <img src="images/about-title-02-s.svg" alt="#兒童福利聯盟 Child Welfare League Foundation">
+                </div>
+            </div>
             <div class="about-pic-content2 clearfix">
                 <div class="w50 about-pic" style="position: relative; z-index: 4;">
                     <img src="images/about-02.png" alt="" class="swing">
                 </div>
                 <div class="w50">
-                    <div class="top-title">
-                        <img src="images/about-title-02.svg" alt="">
+                    <div class="top-title pc">
+                        <img src="images/about-title-02.svg" alt="#兒童福利聯盟 Child Welfare League Foundation">
                     </div>
                     <p class="about-text">
                         兒童福利聯盟致力於兒童福利工作的推展，堅持「給孩子一個更好的世界」的成立初衷，致力讓每個孩子都能獲得愛、關懷和瞭解，並因應社會變遷與問題，開展了許多新興的直接服務方案。<br>
