更新活動葉demo

--- a/2021cwlf-2/index.html
+++ b/2021cwlf-2/index.html
@@ -79,9 +79,11 @@
     <section class="banner">
         <div class="container">
             <div class="flexslider">
-                <ul class="slides">
+                <ul class="slides main-pc">
                     <li><img width="100%" src="images/banner.png" /></li>
-                    <li><img width="100%" src="images/banner.png" /></li>
+                </ul>
+                <ul class="slides main-mob">
+                    <li><img width="100%" src="images/main_img-s.png" /></li>
                 </ul>
             </div>
         </div>
@@ -809,7 +811,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/offcanvas.js"></script>
     <script src="js/font-awesome.min.js"></script>
-    <script src="js/jquery.flexslider-min.js"></script>
+    <!-- <script src="js/jquery.flexslider-min.js"></script> -->
     <script src="js/jquery.scrollup.js"></script>
     <script src="js/common.js"></script>
 </body>
