--- a/iiot/prevention/index.html
+++ b/iiot/prevention/index.html
@@ -20,6 +20,21 @@
                     實聯制登記
                 </h1>
                 <p class="maintitle-en">Contact-Cased Registration</p>
+                <div class="verification-phone">
+                    <p class="title">請輸入您的<span>手機號碼</span>並按驗證</p>
+                    <fieldset class="field">
+                        <div class="border clearfix">
+                            <input type="text" name="" placeholder="例：0912345678">
+                            <button>取得驗證碼</button>
+                        </div>
+                    </fieldset>
+                    <fieldset class="field">
+                        <div class="border clearfix">
+                            <input type="text" name="" placeholder="請輸入您的驗證碼">
+                            <button>確認</button>
+                        </div>
+                    </fieldset>
+                </div>
                 <h2 class="subtitle">
                     顧客與員工的安全與健康是我們最關心的事，為加強防疫措施，即日起我們將進行實聯制登記。<br>
                     <span>The health and safety of customers and co-workers are always the top priorities of IKEA- To strengthen epidemic prevention measures，customers are requried to do the name registration while you enter IKEA</span>
