更新 RWD 小細節
調整：
1.菜單~點點點 選單文字跑到第二行
2.小螢幕 文字在縮小一些

--- a/quickclick/menu.html
+++ b/quickclick/menu.html
@@ -107,7 +107,7 @@
                     <div class="btn-menu-actions">
                         <a class="btn--primary-m" href="#" target="_blank">預覽</a>
                     </div>
-                    <p class="update">上次更新：昨天 下午 6:00 · Kay</p>
+                    <p class="update">上次更新：2021-10-22 下午 3:00 · Amber Liu</p>
                 </div>
                 <div class="card">
                     <div class="more-features">
