修改IOS預設按鈕和統一多選按鈕樣式
1.下拉按鈕隱藏，統一用單一顆按鈕
2.新增IOX預設按鈕 CSS

--- a/CRM/product.html
+++ b/CRM/product.html
@@ -486,7 +486,7 @@
                         <div class="fillin-info">
                             <fieldset class="clearfix">
                                 <label class="item-title">促銷專案</label>
-                                <div class="confirm search-list">
+                                <!-- <div class="confirm search-list">
                                     <a class="btn-search popup-link" href="#popup-add-projects">
                                         <i class="fas fa-search"></i>
                                     </a>
@@ -515,7 +515,13 @@
                                             </li>
                                         </ul>
                                     </div>
-                                </div>
+                                </div> -->
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-projects">
+                                        <i class="fas fa-plus"></i>
+                                        <span>新增專案</span>
+                                    </a>
+                                </div>    
                             </fieldset>
                         </div>
                     </div>
@@ -656,11 +662,17 @@
                             <fieldset class="clearfix">
                                 <label class="item-title">促銷專案</label>
                                 <div class="confirm search-list">
-                                    <a class="btn-search popup-link" href="#popup-add-projects">
+                                    <div class="confirm">
+                                        <a class="btn-add btn--primary-s popup-link" href="#popup-add-projects">
+                                            <i class="fas fa-plus"></i>
+                                            <span>新增專案</span>
+                                        </a>
+                                    </div>
+                                    <!-- <a class="btn-search popup-link" href="#popup-add-projects">
                                         <i class="fas fa-search"></i>
                                     </a>
                                     <input class="" type="" name="" value="年約" placeholder="搜尋專案">
-                                    <!-- <div class="show-add-list">
+                                    <div class="show-add-list">
                                         <ul>
                                             <li>
                                                 <a href="#">
@@ -1038,6 +1050,9 @@
                         <div class="fillin-info">
                             <fieldset class="clearfix">
                                 <div class="confirm search-list">
+                                    <a class="btn-search popup-link" href="#popup-add-products">
+                                        <i class="fas fa-search"></i>
+                                    </a>
                                     <input type="" name="" value="" placeholder="搜尋條款">
                                 </div>
                             </fieldset>
