--- a/CRM/project.html
+++ b/CRM/project.html
@@ -474,7 +474,7 @@
                         <div class="fillin-info">
                             <fieldset class="clearfix">
                                 <label class="item-title">產品選項</label>
-                                <div class="confirm search-list">
+                                <!-- <div class="confirm search-list">
                                     <a class="btn-search popup-link" href="#popup-add-products">
                                         <i class="fas fa-search"></i>
                                     </a>
@@ -508,6 +508,13 @@
                                             </li>
                                         </ul>
                                     </div>
+                                </div> -->
+                                <!-- 統一按鈕 -->
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-products">
+                                        <i class="fas fa-plus"></i>
+                                        <span>新增產品</span>
+                                    </a>
                                 </div>
                             </fieldset>
                         </div>
@@ -583,7 +590,7 @@
                         <div class="fillin-info">
                             <fieldset class="clearfix">
                                 <label class="item-title">產品選項</label>
-                                <div class="confirm search-list">
+                                <!-- <div class="confirm search-list">
                                     <a class="btn-search popup-link" href="#popup-add-products">
                                         <i class="fas fa-search"></i>
                                     </a>
@@ -617,6 +624,12 @@
                                             </li>
                                         </ul>
                                     </div>
+                                </div> -->
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-products">
+                                        <i class="fas fa-plus"></i>
+                                        <span>新增產品</span>
+                                    </a>
                                 </div>
                             </fieldset>
                             <fieldset class="clearfix">
@@ -987,6 +1000,9 @@
                         <div class="fillin-info">
                             <fieldset class="clearfix">
                                 <div class="confirm search-list">
+                                    <a class="btn-search popup-link" href="#popup-add-products">
+                                        <i class="fas fa-search"></i>
+                                    </a>
                                     <input type="" name="" value="" placeholder="搜尋條款">
                                 </div>
                             </fieldset>
@@ -1032,6 +1048,9 @@
                         <div class="fillin-info">
                             <fieldset class="clearfix">
                                 <div class="confirm search-list">
+                                    <a class="btn-search popup-link" href="#popup-add-products">
+                                        <i class="fas fa-search"></i>
+                                    </a>
                                     <input type="" name="" value="" placeholder="搜尋產品">
                                 </div>
                             </fieldset>
