新增條款頁
1.新增條款頁
2.調整專案和產品的按鈕（上次有些沒改到）

--- a/CRM/project.html
+++ b/CRM/project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CRM 管理後台登入頁 - 促銷專案</title>
+    <title>CRM 管理後台 - 促銷專案</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="on-server/css/fontawesome-all.css.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
@@ -769,11 +769,11 @@
                         <div class="fillin-info">
                             <fieldset class="clearfix">
                                 <label class="item-title">產品選項</label>
-                                <div class="confirm search-list">
-                                    <a class="btn-search popup-link" href="#popup-add-products">
-                                        <i class="fas fa-search"></i>
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-products">
+                                        <i class="fas fa-plus"></i>
+                                        <span>新增產品</span>
                                     </a>
-                                    <input class="" type="" name="" value="" placeholder="搜尋產品">
                                 </div>
                             </fieldset>
                             <fieldset class="clearfix">
