--- a/CRM/product.html
+++ b/CRM/product.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CRM 管理後台登入頁 - 產品</title>
+    <title>CRM 管理後台 - 產品</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="on-server/css/fontawesome-all.css.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
     <script type="text/javascript" src="js/menu.js"></script>
             
     <!-- Pushy -->
@@ -861,7 +860,12 @@
                                     <a class="btn-search popup-link" href="#popup-add-projects">
                                         <i class="fas fa-search"></i>
                                     </a>
-                                    <input class="" type="" name="" value="年約" placeholder="搜尋專案">
+                                    <div class="confirm">
+                                        <a class="btn-add btn--primary-s popup-link" href="#popup-add-projects">
+                                            <i class="fas fa-plus"></i>
+                                            <span>新增專案</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </fieldset>
                         </div>
